fix: ESG, improved Scoring, Elliotwave begin

--- a/technical_analysis/symbols_config.json
+++ b/technical_analysis/symbols_config.json
@@ -67,7 +67,15 @@
     "IWM",
     "VTWO",
     "QQQ",
-    "DIA"
+    "DIA",
+    "HLAL",
+    "SPUS",
+    "IEMG",
+    "VWO",
+    "EFA",
+    "ACWI",
+    "EEMV",
+    "SCHE"
   ],
   "clean_energy_materials": [
     "ALB",
