--- a/technical_analysis/configuration.json
+++ b/technical_analysis/configuration.json
@@ -1,5 +1,48 @@
 {
-  "_comment": "Aliases and tickers for print_indicators. symbol_aliases: user input (e.g. BTC, GOLD) -> data ticker (BTC-USD, GC=F). category_aliases: user input -> symbols_config key. Use BTC/GOLD for BTC vs GOLD (both resolved and shown).",
+  "_comment": "Single config: categories (symbols by category), max_symbols_per_category (e.g. 3 = top 3 per industry to reduce data), aliases, timeframes.",
+  "tf_rules": {
+    "4H": "4H",
+    "1D": "1D",
+    "2D": "2D",
+    "3D": "3D",
+    "1W": "7D",
+    "2W": "14D",
+    "1M": "30D",
+    "2M": "60D",
+    "6M": "180D"
+  },
+  "default_timeframes": ["1W", "1M"],
+  "result_file_exclude": [
+    "market_caps.json",
+    "esg_ratings.json",
+    "performance_vs_btc_eth.json",
+    "performance_vs_spy.json"
+  ],
+  "max_symbols_per_category": 3,
+  "categories": {
+    "quantum": ["IONQ", "QTUM", "QBTS", "RGTI"],
+    "miner_hpc": ["MNRS", "IREN", "BMNR", "HUT", "CIFR", "WULF", "CORZ", "BITF", "CLSK", "WGMI"],
+    "faang_hot_stocks": ["META", "AAPL", "AMZN", "NFLX", "GOOGL", "MSFT", "APLD", "ARM", "ABNB", "CRWD", "MU", "WDC"],
+    "tech_stocks": ["TMUS", "NOW", "PATH", "DLO", "PGY"],
+    "cryptocurrencies": ["BTC-USD", "ETH-USD", "SOL-USD", "ADA-USD", "DOT-USD", "AVAX-USD", "MATIC-USD", "LINK-USD", "UNI-USD", "ATOM-USD", "XRP-USD", "BNB-USD", "QANX-USD", "QRL-USD", "CKB-USD", "ABEL-USD", "IBIT", "FBTC", "GBTC", "BITB", "ARKB", "ETHA", "ETHE", "FETH", "GSOL", "BSOL", "ETHX-B.TO", "ETHX.TO", "EBIT.TO", "BTCC-B.TO", "BTCX-B.TO", "SOLA.TO"],
+    "precious_metals": ["GC=F", "SI=F", "PA=F", "PL=F"],
+    "index_etfs": ["SPY", "IWM", "VTWO", "QQQ", "DIA", "HLAL", "SPUS", "IEMG", "VWO", "EFA", "ACWI", "EEMV", "SCHE"],
+    "clean_energy_materials": ["ALB", "CCJ", "AEM", "FCX"],
+    "silver_miners_esg": ["PAAS", "AG", "WPM", "HL", "SVM"],
+    "renewable_energy": ["ENPH", "SEDG", "RUN", "PLUG"],
+    "battery_storage": ["QS", "SLDP", "AMSC"],
+    "next_gen_automotive": ["TSLA", "NIO", "LI", "XPEV", "RIVN", "LCID", "F", "GM", "TM"],
+    "ai_semiconductors": ["NVDA", "AMD", "AVGO", "QCOM", "INTC", "TSM", "ASML", "MRVL", "ON", "MPWR"],
+    "energy_commodities": ["CL=F", "NG=F", "HO=F", "RB=F"],
+    "agricultural_commodities": ["ZC=F", "ZS=F", "ZW=F", "KC=F", "CT=F", "SB=F"],
+    "industrial_metals": ["HG=F", "ZN=F", "ALI=F"],
+    "real_estate": ["VNQ", "SCHH", "IYR", "XLRE"],
+    "healthcare": ["JNJ", "UNH", "PFE", "ABBV", "TMO", "DHR"],
+    "financials": ["JPM", "BAC", "WFC", "GS", "MS", "C"],
+    "consumer_discretionary": ["HD", "NKE", "SBUX", "MCD"],
+    "utilities": ["DUK", "SO", "D", "AEP"],
+    "macro_trend": ["^GSPC", "EEM", "DX-Y.NYB"]
+  },
   "symbol_aliases": {
     "BTC": "BTC-USD",
     "ETH": "ETH-USD",
@@ -14,146 +57,7 @@
     "COPPER": "HG=F",
     "SPX": "SPY",
     "SP500": "SPY",
-    "NASDAQ": "QQQ",
-    "BTC-USD": "BTC-USD",
-    "ETH-USD": "ETH-USD",
-    "SOL-USD": "SOL-USD",
-    "GC=F": "GC=F",
-    "SI=F": "SI=F",
-    "PA=F": "PA=F",
-    "PL=F": "PL=F",
-    "SPY": "SPY",
-    "IWM": "IWM",
-    "VTWO": "VTWO",
-    "QQQ": "QQQ",
-    "DIA": "DIA",
-    "HLAL": "HLAL",
-    "SPUS": "SPUS",
-    "IEMG": "IEMG",
-    "VWO": "VWO",
-    "EFA": "EFA",
-    "ACWI": "ACWI",
-    "EEMV": "EEMV",
-    "SCHE": "SCHE",
-    "META": "META",
-    "AAPL": "AAPL",
-    "AMZN": "AMZN",
-    "NFLX": "NFLX",
-    "GOOGL": "GOOGL",
-    "MSFT": "MSFT",
-    "NVDA": "NVDA",
-    "AMD": "AMD",
-    "TSLA": "TSLA",
-    "IONQ": "IONQ",
-    "QTUM": "QTUM",
-    "QBTS": "QBTS",
-    "RGTI": "RGTI",
-    "MNRS": "MNRS",
-    "IREN": "IREN",
-    "BMNR": "BMNR",
-    "HUT": "HUT",
-    "CIFR": "CIFR",
-    "WULF": "WULF",
-    "CORZ": "CORZ",
-    "BITF": "BITF",
-    "CLSK": "CLSK",
-    "WGMI": "WGMI",
-    "TMUS": "TMUS",
-    "NOW": "NOW",
-    "PATH": "PATH",
-    "DLO": "DLO",
-    "PGY": "PGY",
-    "ADA-USD": "ADA-USD",
-    "DOT-USD": "DOT-USD",
-    "AVAX-USD": "AVAX-USD",
-    "MATIC-USD": "MATIC-USD",
-    "LINK-USD": "LINK-USD",
-    "UNI-USD": "UNI-USD",
-    "ATOM-USD": "ATOM-USD",
-    "XRP-USD": "XRP-USD",
-    "BNB-USD": "BNB-USD",
-    "ALB": "ALB",
-    "CCJ": "CCJ",
-    "AEM": "AEM",
-    "FCX": "FCX",
-    "PAAS": "PAAS",
-    "AG": "AG",
-    "WPM": "WPM",
-    "HL": "HL",
-    "SVM": "SVM",
-    "ENPH": "ENPH",
-    "SEDG": "SEDG",
-    "RUN": "RUN",
-    "PLUG": "PLUG",
-    "QS": "QS",
-    "SLDP": "SLDP",
-    "AMSC": "AMSC",
-    "NIO": "NIO",
-    "LI": "LI",
-    "XPEV": "XPEV",
-    "RIVN": "RIVN",
-    "LCID": "LCID",
-    "F": "F",
-    "GM": "GM",
-    "TM": "TM",
-    "AVGO": "AVGO",
-    "QCOM": "QCOM",
-    "INTC": "INTC",
-    "TSM": "TSM",
-    "ASML": "ASML",
-    "MRVL": "MRVL",
-    "ON": "ON",
-    "MPWR": "MPWR",
-    "CL=F": "CL=F",
-    "NG=F": "NG=F",
-    "HO=F": "HO=F",
-    "RB=F": "RB=F",
-    "ZC=F": "ZC=F",
-    "ZS=F": "ZS=F",
-    "ZW=F": "ZW=F",
-    "KC=F": "KC=F",
-    "CT=F": "CT=F",
-    "SB=F": "SB=F",
-    "HG=F": "HG=F",
-    "ZN=F": "ZN=F",
-    "ALI=F": "ALI=F",
-    "VNQ": "VNQ",
-    "SCHH": "SCHH",
-    "IYR": "IYR",
-    "XLRE": "XLRE",
-    "JNJ": "JNJ",
-    "UNH": "UNH",
-    "PFE": "PFE",
-    "ABBV": "ABBV",
-    "TMO": "TMO",
-    "DHR": "DHR",
-    "JPM": "JPM",
-    "BAC": "BAC",
-    "WFC": "WFC",
-    "GS": "GS",
-    "MS": "MS",
-    "C": "C",
-    "HD": "HD",
-    "NKE": "NKE",
-    "SBUX": "SBUX",
-    "MCD": "MCD",
-    "DUK": "DUK",
-    "SO": "SO",
-    "D": "D",
-    "AEP": "AEP",
-    "^GSPC": "^GSPC",
-    "EEM": "EEM",
-    "DX-Y.NYB": "DX-Y.NYB",
-    "APLD": "APLD",
-    "ARM": "ARM",
-    "ABNB": "ABNB",
-    "CRWD": "CRWD",
-    "MU": "MU",
-    "WDC": "WDC",
-    "QANX-USD": "QANX-USD",
-    "QRL-USD": "QRL-USD",
-    "CKB-USD": "CKB-USD",
-    "ABEL-USD": "ABEL-USD"
+    "NASDAQ": "QQQ"
   },
   "category_aliases": {
     "precious_metals": "precious_metals",
@@ -196,7 +100,23 @@
     "ETH-USD": "Ethereum",
     "SOL-USD": "Solana",
     "SPY": "S&P 500",
-    "QQQ": "Nasdaq 100"
+    "QQQ": "Nasdaq 100",
+    "IBIT": "iShares Bitcoin Trust",
+    "FBTC": "Fidelity Bitcoin",
+    "GBTC": "Grayscale Bitcoin Trust",
+    "BITB": "Bitwise Bitcoin ETF",
+    "ARKB": "ARK 21Shares Bitcoin",
+    "ETHA": "iShares Ethereum Trust",
+    "ETHE": "Grayscale Ethereum",
+    "FETH": "Fidelity Ethereum",
+    "GSOL": "Grayscale Solana",
+    "BSOL": "Bitwise Solana",
+    "ETHX-B.TO": "CI Galaxy Ethereum ETF (TSX Unhedged)",
+    "ETHX.TO": "CI Galaxy Ethereum ETF (TSX Hedged)",
+    "EBIT.TO": "Evolve Bitcoin ETF (TSX)",
+    "BTCC-B.TO": "Purpose Bitcoin ETF (TSX)",
+    "BTCX-B.TO": "CI Galaxy Bitcoin ETF (TSX)",
+    "SOLA.TO": "Evolve Solana ETF (TSX)"
   },
   "category_display_names": {
     "precious_metals": "Precious Metals",
